--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "Start": "node server.js"
   },
   "author": "Mjora",
   "license": "MIT",
