--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "Start": "node server.js"
+    "start": "node server.js"
   },
   "author": "Mjora",
   "license": "MIT",
